--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </ul>
   </nav>
     
-  <main class="container">
-    <h1></h1>/
+  <main id="inicio" class="container">
+    <h1></h1>
 
   <section class="hero" id=" inicio">
   <div class="hero__content">
@@ -204,3 +204,4 @@
   </footer>
 </body>
 </html>
+
